--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,1 +1,13 @@
-"@oclif/prettier-config"
+{
+  "printWidth": 80,
+  "tabWidth": 2,
+  "useTabs": false,
+  "semi": true,
+  "singleQuote": false,
+  "trailingComma": "es5",
+  "bracketSpacing": true,
+  "jsxBracketSameLine": false,
+  "arrowParens": "always",
+  "proseWrap": "preserve",
+  "plugins": ["@oclif/prettier-config"]
+}
