--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
   "name": "nexuscraft-cli",
   "description": "A simple CLI to interact with the NexusCraft Cloud",
-  "version": "1.0.2",
+  "version": "1.2.0",
   "author": "nexuscraft",
   "bin": {
     "nexus": "./bin/run.js"
   },
   "bugs": "https://github.com/nexuscraft-app/cli/issues",
   "dependencies": {
+    "@inquirer/confirm": "^5.1.3",
+    "@inquirer/prompts": "^7.2.3",
     "@oclif/core": "^4",
     "@oclif/plugin-help": "^6",
     "@oclif/plugin-plugins": "^5",
     "chalk": "^5.4.1",
     "cli-table3": "^0.6.5",
     "inquirer": "^12.3.2",
+    "inquirer-autocomplete-standalone": "^0.8.1",
     "makensis": "^2.0.8",
     "ora": "^8.1.1",
     "terminal-link": "^3.0.0"
